# xorr-agent-backend

./: .env.example  .gitignore  COMPETITION_RUNBOOK.md  PERFORMANCE.md  README.md  ROBUSTNESS.md  agent_card.json  config.py  main.py  pyproject.toml  requirements.txt  run.py  start_bot.bat  tokens.eligible.json
api/: backtest.py  brain.py  deps.py  engine_routes.py  learning.py  mcp.py  overview.py  settings_routes.py  stream.py  trades.py  wallet.py
backtest/: cli.py  data_loader.py  engine.py  perf.py  perp_backtest.py  reporter.py  robustness.py  runner.py  store.py
brain/: council.py  decision_log.py  llm_client.py  prompts.py
claude/: SYSTEM.md  __init__.py  claude_brain.py  confluence.py  council_screen.py  features.py  playbook.py  watchlist_agent.py
core/: agent_identity.py  agent_wallet.py  erc8004.py  perp_math.py  readiness.py  reconciler.py  rpc.py  sim_ledger.py  telegram.py  twak_executor.py  types.py  wallet.py
data/: binance_klines.py  binance_news.py  cascade.py  cex_oracle.py  cmc_client.py  cmc_mcp.py  cmc_signals.py  fear_greed.py  funding.py  liq_feed.py  tokens.py  ws_feed.py
data_store/: trades.db-shm  trades.db-wal
docs/: 01-architecture.md  02-strategies.md  03-how-we-found-the-edge.md  04-robustness.md  05-risk-and-execution.md  06-data-feeds.md  07-the-journey.md  08-performance-strategies.md  09-verification.md  10-trader-dev.md  11-spot-only.md  12-claude-brain.md  README.md
engine/: learning.py  modes.py  monitor.py  pipeline.py  scheduler.py  status.py
filters/: cex_sanity.py  confluence_score.py  cooldown.py  regime.py  (+4 more)
(+264 files in other folders)
