[project]
name = "xorr-agent-backend"
version = "0.1.0"
description = "Autonomous Trading Agent for BNB Chain"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlmodel>=0.0.16",
    "httpx>=0.27.0",
    "anyio>=4.3.0",
    "web3>=6.15.0",
    "skyfield>=1.49",
    "python-dateutil>=2.9.0",
    "qrcode[pil]>=7.4.0"
]
